src/snapshots/droid_tui__regression__visual_physical_skeleton_multirow_rack_snapshot@physical_skeleton_multirow_rack_terminal_80.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────┐
│                         DROID: physical_multirow_rack                        │
└──────────────────────────────────────────────────────────────────────────────┘
┌──┐┌──┐┌──┐┌──┐┌──┌──┐┌──┐┌──┐┌──┐┌──┐┌──┐┌──┐┌──┐┌──┌──┐┌──┐┌────┐┐
· ·│· ·│· ·│· ·│·· │··││··││··│· ·│· ·│· ·│· ·│· ·│·· │··││··││    ││
│  ││  ││  ││  ││  │  ││  ││  ││  ││  ││  ││  ││  ││  │  ││  ││    ││
│  ││  ││  ││  ││  │  ││  ││  ││  ││  ││  ││  ││  ││  │  ││  ││    ││
│  ││  ││  ││  ││  │  ││  ││  ││  ││  ││  ││  ││  ││  │  ││  ││    ││
│  ││  ││  ││  ││  │  ││  ││  ││  ││  ││  ││  ││  ││  │  ││  ││    ││
│  ││  ││  ││  ││  │  ││  ││  ││  ││  ││  ││  ││  ││  │  ││  ││    ││
│  ││  ││  ││  ││  │  ││  ││  ││  ││  ││  ││  ││  ││  │  ││  ││    ││
│  ││  ││  ││  ││  │  ││  ││  ││  ││  ││  ││  ││  ││  │  ││  ││    ││
│  ││  ││  ││  ││  │  ││  ││  ││  ││  ││  ││  ││  ││  │  ││  ││    ││
│  ││  ││  ││  ││  │  ││  ││  ││  ││  ││  ││  ││  ││  │  ││  ││    ││
│··│···│···│···│···│···│···│··││··│···│···│···│···│···│···│···│    ││
│  ││  ││  ││  ││  │  ││  ││  ││  ││  ││  ││  ││  ││  │  ││  ││    ││
│  ││  ││  ││  ││  │  ││  ││  ││  ││  ││  ││  ││  ││  │  ││  ││    ││
│  ││  ││  ││  ││  │  ││  ││  ││  ││  ││  ││  ││  ││  │  ││  ││    ││
│··│· ·│· ·│· ·│·· │··││··││··││··│· ·│· ·│· ·│· ·│·· │··││··││◀   ││
│··││··││··││··│· ·│· ·│· ·│··││··││··││··││··││··│· ·│· ·│· ·│    ││
│  ││  ││  ││  ││  │  ││  ││  ││  ││  ││  ││  ││  ││  │  ││  ││    ││
│  ││  ││  ││  ││  │  ││  ││  ││  ││  ││  ││  ││  ││  │  ││  ││    ││
│  ││  ││  ││  ││  │  ││  ││  ││  ││  ││  ││  ││  ││  │  ││  ││    ││
│··│···│···│···│···│···│···│··││··│···│···│···│···│···│···│···│    ││
│  ││  ││  ││  ││  │  ││  ││  ││  ││  ││  ││  ││  ││  │  ││  ││    ││
│  ││  ││  ││  ││  │  ││  ││  ││  ││  ││  ││  ││  ││  │  ││  ││    ││
│  ││  ││  ││  ││  │  ││  ││  ││  ││  ││  ││  ││  ││  │  ││  ││    ││
│··│· ·│· ·│· ·│·· │··││··││··││··│· ·│· ·│· ·│· ·│·· │··││··││    ││
│··││··││··││··│· ·│· ·│· ·│··││··││··││··││··││··│· ·│· ·│· ·│    ││
│  ││  ││  ││  ││  │  ││  ││  ││  ││  ││  ││  ││  ││  │  ││  ││    ││
│  ││  ││  ││  ││  │  ││  ││  ││  ││  ││  ││  ││  ││  │  ││  ││    ││
│  ││  ││  ││  ││  │  ││  ││  ││  ││  ││  ││  ││  ││  │  ││  ││    ││
│  ││  ││  ││  ││  │  ││  ││  ││  ││  ││  ││  ││  ││  │  ││  ││    ││
│  ││  ││  ││  ││  │  ││  ││  ││  ││  ││  ││  ││  ││  │  ││  ││    ││
│  ││  ││  ││  ││  │  ││  ││  ││  ││  ││  ││  ││  ││  │  ││  ││    ││
│  ││  ││  ││  ││  │  ││  ││  ││  ││  ││  ││  ││  ││  │  ││  ││    ││
│  ││  ││  ││  ││  │  ││  ││  ││  ││  ││  ││  ││  ││  │  ││  ││    ││
│  ││  ││  ││  ││  │  ││  ││  ││  ││  ││  ││  ││  ││  │  ││  ││    ││
└──┘└──┘└──┘└──┘└──└──┘└──┘└──┘└──┘└──┘└──┘└──┘└──┘└──└──┘└──┘└────┘┘




























┌──────────────────────────────────────────────────────────────────────────────┐
│No patch loaded. Press 'l' to load. | Renders degraded at 80 cols — use ≥ 310 │
└──────────────────────────────────────────────────────────────────────────────┘
