src/snapshots/droid_tui__regression__visual_picker_favourites_snapshot@picker_favourites.snap
---
source: src/regression.rs
expression: buffer_to_ansi(&buf)
---


  ┌ File Picker ─────────────────────────────────────────────────────────────┐
  │▶ ★ fav_alpha.ini                                                         │
  │  ★ fav_beta.ini                                                          │
  │── favourites ──                                                          │
  │  ..                                                                      │
  │  subdir                                                                  │
  │  patch_a.ini                                                             │
  │  readme.txt                                                              │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  └──────────────────────────────────────────────────────────────────────────┘
