src/snapshots/droid_tui__regression__visual_picker_parent_entry_snapshot@picker_parent_entry.snap
---
source: src/regression.rs
assertion_line: 876
expression: buffer_to_ansi(&buf)
---


  ┌ File Picker ─────────────────────────────────────────────────────────────────────────────────┐
  │▶ ..                                                                                          │
  │  subdir                                                                                      │
  │  patch_a.ini                                                                                 │
  │  readme.txt                                                                                  │
  │                                                                                              │
  │                                                                                              │
  │                                                                                              │
  │                                                                                              │
  │                                                                                              │
  │                                                                                              │
  │                                                                                              │
  │                                                                                              │
  │                                                                                              │
  │                                                                                              │
  │                                                                                              │
  │                                                                                              │
  │                                                                                              │
  │                                                                                              │
  │                                                                                              │
  │                                                                                              │
  │                                                                                              │
  │                                                                                              │
  │                                                                                              │
  │                                                                                              │
  └──────────────────────────────────────────────────────────────────────────────────────────────┘
