src/snapshots/droid_tui__regression__visual_quad_fallback_widths_snapshot@quad_fallback_b1_classic_80.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────┐
│                      DROID: modifier_switch_passthrough                      │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Panels ──────────────────────────────────────┐┌ Source [raw] ────────────────┐
│◉◉┐┌────┐┐                                    ││    button = B1.1             │
│…0%  CV …                                     ││    output = _TRIG            │
││ ││    ││                                    ││                              │
││ ││    ││                                    ││[copy]                        │
││ ││    ││                                    ││    input = B1.1              │
││ ││    ││                                    ││    output = _EXTRA           │
││ ││    ││                                    ││                              │
││ ││    ││                                    ││[clocktool]                   │
││ ││    ││                                    ││    output = _BASE            │
││ ││    ││                                    ││                              │
│○○││    ││                                    ││# direct consumption: _BASE co│
│……││    ││                                    ││[copy]                        │
││ ││    ││                                    ││    input = _BASE             │
││ ││    ││                                    ││    output = O1               │
│○○││  ▶ ││                                    ││                              │
│○○││  … ││                                    ││[contour]                     │
││ ││    ││                                    ││    input = _BASE             │
││ ││    ││                                    ││                              │
││ ││  ▶ ││                                    ││# copy chain: _TRIG -> _COPY1 │
│○○││  … ││                                    ││[copy]                        │
│……││    ││                                    ││    input = _TRIG             │
││ ││    ││                                    ││    output = _COPY1           │
││ ││    ││                                    ││                              │
│○○││    ││                                    ││[copy]                        │
│○○││    ││                                    ││    input = _COPY1            │
││ ││    ││                                    ││    output = _COPY2           │
││ ││  ▶ ││                                    ││                              │
││ ││  … ││                                    ││[contour]                     │
││ ││    ││                                    ││    input = _COPY2            │
││ ││    ││                                    ││                              │
││ ││    ││                                    ││# indirect via switch: _TRIG -│
│└─┘└────┘┘                                    ││[switch]                      │
└──────────────────────────────────────────────┘└──────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│Quad fallback (<120 cols): showing panels+source | Esc close                  │
└──────────────────────────────────────────────────────────────────────────────┘
