src/snapshots/droid_tui__regression__visual_quad_fallback_widths_snapshot@quad_fallback_b1_mono_100.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                DROID: modifier_switch_passthrough                                │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Panels ──────────────────────────────────────────────────┐┌ Circuits ────────┐┌ Source [raw] ────┐
│┌ P2B8 ──────────────────────────────────────────────────┐││p2b8              ││    button = B1.1 │
││     ○ B1.1          ○ L1.1          ○ B1.2             │││button            ││    output = _TRIG│
││       OFF             OFF             OFF              │││copy              ││                  │
││                                                        │││clocktool         ││[copy]            │
││     ○ L1.2          ○ B1.3          ○ L1.3             │││copy (1)          ││    input = B1.1  │
││       OFF             OFF             OFF              │││contour           ││    output = _EXTR│
││                                                        │││copy (2)          ││                  │
││     ○ B1.4          ○ L1.4          ○ B1.5             │││copy (3)          ││[clocktool]       │
││       OFF             OFF             OFF              │││contour (1)       ││    output = _BASE│
││                                                        │││switch            ││                  │
││     ○ L1.5          ○ B1.6          ○ L1.6             │││quantizer         ││# direct consumpti│
││       OFF             OFF             OFF              │││mixer             ││[copy]            │
││                                                        │││contour (2)       ││    input = _BASE │
││     ○ B1.7          ○ L1.7          ○ B1.8             │││logic             ││    output = O1   │
││       OFF             OFF             OFF              │││copy (4)          ││                  │
││                                                        │││led               ││[contour]         │
││     ○ L1.8          ◉ P1.1          ◉ P1.2             │││contour (3)       ││    input = _BASE │
││       OFF             0%              0%               │││copy (5)          ││                  │
││                                                        │││copy (6)          ││# copy chain: _TRI│
│└────────────────────────────────────────────────────────┘││copy (7)          ││[copy]            │
│┌ CV I/O ────────────────────────────────────────────────┐││switch (1)        ││    input = _TRIG │
││    ← Copy O1    ← Quantizer O2    ← Switch O4          │││                  ││    output = _COPY│
││     CV OUT          CV OUT          CV OUT             │││                  ││                  │
││                                                        │││                  ││[copy]            │
│└────────────────────────────────────────────────────────┘││                  ││    input = _COPY1│
│                                                          ││                  ││    output = _COPY│
│                                                          ││                  ││                  │
│                                                          ││                  ││[contour]         │
│                                                          ││                  ││    input = _COPY2│
│                                                          ││                  ││                  │
│                                                          ││                  ││# indirect via swi│
│                                                          ││                  ││[switch]          │
└──────────────────────────────────────────────────────────┘└──────────────────┘└──────────────────┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│Quad fallback (<120 cols): showing panels+source | Esc close                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
