src/snapshots/droid_tui__regression__visual_quad_fallback_widths_snapshot@quad_fallback_b1_terminal_100.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                DROID: modifier_switch_passthrough                                │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Panels ──────────────────────────────────────────────────┐┌ Circuits ────────┐┌ Source [raw] ────┐
│◉◉┐┌────┐┐                                                ││p2b8              ││    button = B1.1 │
│…0%  CV …                                                 ││button            ││    output = _TRIG│
││ ││    ││                                                ││copy              ││                  │
││ ││    ││                                                ││clocktool         ││[copy]            │
││ ││    ││                                                ││copy (1)          ││    input = B1.1  │
││ ││    ││                                                ││contour           ││    output = _EXTR│
││ ││    ││                                                ││copy (2)          ││                  │
││ ││    ││                                                ││copy (3)          ││[clocktool]       │
││ ││    ││                                                ││contour (1)       ││    output = _BASE│
││ ││    ││                                                ││switch            ││                  │
│○○││    ││                                                ││quantizer         ││# direct consumpti│
│……││    ││                                                ││mixer             ││[copy]            │
││ ││    ││                                                ││contour (2)       ││    input = _BASE │
││ ││    ││                                                ││logic             ││    output = O1   │
│○○││  ▶ ││                                                ││copy (4)          ││                  │
│○○││  … ││                                                ││led               ││[contour]         │
││ ││    ││                                                ││contour (3)       ││    input = _BASE │
││ ││    ││                                                ││copy (5)          ││                  │
││ ││  ▶ ││                                                ││copy (6)          ││# copy chain: _TRI│
│○○││  … ││                                                ││copy (7)          ││[copy]            │
│……││    ││                                                ││switch (1)        ││    input = _TRIG │
││ ││    ││                                                ││                  ││    output = _COPY│
││ ││    ││                                                ││                  ││                  │
│○○││    ││                                                ││                  ││[copy]            │
│○○││    ││                                                ││                  ││    input = _COPY1│
││ ││    ││                                                ││                  ││    output = _COPY│
││ ││  ▶ ││                                                ││                  ││                  │
││ ││  … ││                                                ││                  ││[contour]         │
││ ││    ││                                                ││                  ││    input = _COPY2│
││ ││    ││                                                ││                  ││                  │
││ ││    ││                                                ││                  ││# indirect via swi│
│└─┘└────┘┘                                                ││                  ││[switch]          │
└──────────────────────────────────────────────────────────┘└──────────────────┘└──────────────────┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│Quad fallback (<120 cols): showing panels+source | Esc close                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
