src/snapshots/droid_tui__regression__visual_quad_fallback_widths_snapshot@quad_fallback_b1_terminal_80.snap
---
source: src/regression.rs
assertion_line: 2462
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────┐
│                      DROID: modifier_switch_passthrough                      │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Panels ──────────────────────────────────────┐┌ Source [raw] ────────────────┐
│┌ P2B8 ──────────────────────────────────────┐││    button = B1.1             │
││  ○ Button B1.1    ○ LED L1.1               │││    output = _TRIG            │
││       OFF             OFF                  │││                              │
││  ○ Button B1.2    ○ LED L1.2               │││[copy]                        │
││       OFF             OFF                  │││    input = B1.1              │
││                                            │││    output = _EXTRA           │
││  ○ Button B1.3    ○ LED L1.3               │││                              │
││       OFF             OFF                  │││[clocktool]                   │
││  ○ Button B1.4    ○ LED L1.4               │││    output = _BASE            │
││       OFF             OFF                  │││                              │
││                                            │││# direct consumption: _BASE co│
││  ○ Button B1.5    ○ LED L1.5               │││[copy]                        │
││       OFF             OFF                  │││    input = _BASE             │
││  ○ Button B1.6    ○ LED L1.6               │││    output = O1               │
││       OFF             OFF                  │││                              │
││                                            │││[contour]                     │
││  ○ Button B1.7    ○ LED L1.7               │││    input = _BASE             │
││       OFF             OFF                  │││                              │
││  ○ Button B1.8    ○ LED L1.8               │││# copy chain: _TRIG -> _COPY1 │
││       OFF             OFF                  │││[copy]                        │
││                                            │││    input = _TRIG             │
││   ◉ Pot P1.1      ◉ Pot P1.2               │││    output = _COPY1           │
││       0%              0%                   │││                              │
│└────────────────────────────────────────────┘││[copy]                        │
│┌ CV I/O ────────────────────────────────────┐││    input = _COPY1            │
││   ← Output O1     ← Output O2              │││    output = _COPY2           │
││     CV OUT          CV OUT                 │││                              │
││                                            │││[contour]                     │
││   ← Output O4                              │││    input = _COPY2            │
││     CV OUT                                 │││                              │
││                                            │││# indirect via switch: _TRIG -│
│└────────────────────────────────────────────┘││[switch]                      │
└──────────────────────────────────────────────┘└──────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│Quad fallback (<120 cols): showing panels+source | Esc close                  │
└──────────────────────────────────────────────────────────────────────────────┘
