src/snapshots/droid_tui__regression__visual_quad_modifier_switch_passthrough_snapshot@quad_b1_classic_120.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                          DROID: modifier_switch_passthrough                                          │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Panels ──────────────────────────────────────────────────────────────┐┌ Source ──────────────────────────────────────┐
│┌ P2B8 ──────────────────────────────────────────────────────────────┐││┌ Circuits ────────┐┌ Source [raw] ───────┐┌ ┐│
││  ○ Button B1.1    ○ LED L1.1     ○ Button B1.2    ○ LED L1.2       ││││p2b8              ││    button = B1.1    ││·││
││       OFF             OFF             OFF             OFF          ││││button            ││    output = _TRIG   ││█││
││  ○ Button B1.3    ○ LED L1.3     ○ Button B1.4    ○ LED L1.4       ││││copy              ││                     ││·││
││  ○ Button B1.5    ○ LED L1.5     ○ Button B1.6    ○ LED L1.6       ││││clocktool         ││[copy]               ││·││
││       OFF             OFF             OFF             OFF          ││││copy (1)          ││    input = B1.1     ││·││
││  ○ Button B1.7    ○ LED L1.7     ○ Button B1.8    ○ LED L1.8       ││││contour           ││    output = _EXTRA  ││·││
││   ◉ Pot P1.1      ◉ Pot P1.2                                       ││││copy (2)          ││                     ││▓││
││       0%              0%                                           ││││copy (3)          ││[clocktool]          ││·││
│└────────────────────────────────────────────────────────────────────┘│││contour (1)       ││    output = _BASE   ││·││
│┌ CV I/O ────────────────────────────────────────────────────────────┐│││switch            ││                     ││·││
││   ← Output O1     ← Output O2     ← Output O4                      ││││quantizer         ││# direct consumption:││·││
││     CV OUT          CV OUT          CV OUT                         ││││mixer             ││[copy]               ││·││
││                                                                    ││││contour (2)       ││    input = _BASE    ││▓││
│└────────────────────────────────────────────────────────────────────┘││└──────────────────┘└─────────────────────┘└─┘│
└──────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────────┘
┌ Graph FULL ──────────────────────────────────────────────┐┌ Graph FILTERED ──────────────────────────────────────────┐
│╭copy────────────────╮─╮─────────────────────────────────┐││┌(unname╭copy────────────────╮───────────────────────────┐│
││ │╭copy────────────────╮                                ││││       │                  ╭led─────────────────╮        ││
││ ││                 │ ││         ╭b╭led─────────────────╮│││       │        ╭copy─────│─│────────╮         │        ││
││╭c│ntour─────────────╮╮│         │ │                  │ ││││ ╭copy────────────────╮   ◉─╭switch╭quantizer──│────────╮│
│╰│││─────────────────╯│││         │╭◉witch──────────────╮││││ │     ╰─╭copy────────────────╮    │ │         │ │      ││
││││╰────────────────────╯╮        ╭││quantizer───────────││││ │       │      │  ╭copy──────│─────────╮──────╯──╮     ││
│╭copy────────────────╮╮│ │       ╭c╭╰────────────────────╯││╭contour──│─────────│╮─│─────│││────│─╯ ││        ││     ││
│││─╭switch──────────────╮│       │╭╭logic───────────────╮││││ ╰───────│─────────││╭switch──────────────╮───────│─────╯│
│││ │╭contour─────────││─│╮       ││││───────────────────│││││         ╰───────────│────────╯ │       │ │       │     ││
│││c││y───────────────││─││       │◉◉╰───────────────────●╯│││   ╭copy───────────╰─│──────────────────╯─│───────╯     ││
│╰──│─────────────────╯╯╮││       ╰││────────────────────││││╰───│────────────────╯│r─│───────│───╮─────│──────╮      ││
││││╰────────────────────╯│        ╰╰────────────────────╯││││   │       ╰─────────╰────────────────────╯      │      ││
││││ ╰──────────────────│─╯                               ││││   │           │        │   │       │            │      ││
││╰│───────────────────╯│                                 ││││   ╰────────────────────╯   │       │            │      ││
│└─╰────────────────────╯─────────────────────────────────┘││└───────────────╰────────────────────╯────────────╯──────┘│
└──────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Quad [Tab] focus: Panels | Modifier: _EXTRA | Esc close | Tab cycle                                                   │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
