src/snapshots/droid_tui__regression__visual_quad_modifier_switch_passthrough_snapshot@quad_b1_mono_120.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                          DROID: modifier_switch_passthrough                                          │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Panels ──────────────────────────────────────────────────────────────┐┌ Source ──────────────────────────────────────┐
│┌ P2B8 ──────────────────────────────────────────────────────────────┐││┌ Circuits ────────┐┌ Source [raw] ───────┐┌ ┐│
││     ○ B1.1          ○ L1.1          ○ B1.2          ○ L1.2         ││││p2b8              ││    button = B1.1    ││·││
││       OFF             OFF             OFF             OFF          ││││button            ││    output = _TRIG   ││█││
││     ○ B1.3          ○ L1.3          ○ B1.4          ○ L1.4         ││││copy              ││                     ││·││
││     ○ B1.5          ○ L1.5          ○ B1.6          ○ L1.6         ││││clocktool         ││[copy]               ││·││
││       OFF             OFF             OFF             OFF          ││││copy (1)          ││    input = B1.1     ││·││
││     ○ B1.7          ○ L1.7          ○ B1.8          ○ L1.8         ││││contour           ││    output = _EXTRA  ││·││
││     ◉ P1.1          ◉ P1.2                                         ││││copy (2)          ││                     ││▓││
││       0%              0%                                           ││││copy (3)          ││[clocktool]          ││·││
│└────────────────────────────────────────────────────────────────────┘│││contour (1)       ││    output = _BASE   ││·││
│┌ CV I/O ────────────────────────────────────────────────────────────┐│││switch            ││                     ││·││
││    ← Copy O1    ← Quantizer O2    ← Switch O4                      ││││quantizer         ││# direct consumption:││·││
││     CV OUT          CV OUT          CV OUT                         ││││mixer             ││[copy]               ││·││
││                                                                    ││││contour (2)       ││    input = _BASE    ││▓││
│└────────────────────────────────────────────────────────────────────┘││└──────────────────┘└─────────────────────┘└─┘│
└──────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────────┘
┌ Graph FULL ──────────────────────────────────────────────┐┌ Graph FILTERED ──────────────────────────────────────────┐
│╭copy 3──────────────╮─╮─────────────────────────────────┐││┌(unname╭copy 3──────────────╮───────────────────────────┐│
││ │╭copy 5──────────────╮                                ││││       │                  ╭led─────────────────╮        ││
││ ││                 │ ││         ╭b╭led─────────────────╮│││       │        ╭copy 2───│─│────────╮         │        ││
││╭c│ntour 3───────────╮╮│         │ │                  │ ││││ ╭copy 4──────────────╮   ◉─╭switch╭quantizer──│────────╮│
│╰│││─────────────────╯│││         │╭◉witch──────────────╮││││ │     ╰─╭copy 7──────────────╮    │ │         │ │      ││
││││╰────────────────────╯╮        ╭││quantizer───────────││││ │       │      │  ╭copy 6────│─────────╮──────╯──╮     ││
│╭copy 7──────────────╮╮│ │       ╭c╭╰────────────────────╯││╭contour 3│─────────│╮─│─────│││────│─╯ ││        ││     ││
│││─╭switch 1────────────╮│       │╭╭logic───────────────╮││││ ╰───────│─────────││╭switch 1────────────╮───────│─────╯│
│││ │╭contour 1───────││─│╮       ││││───────────────────│││││         ╰───────────│────────╯ │       │ │       │     ││
│││c││y 2─────────────││─││       │◉◉╰───────────────────●╯│││   ╭copy 5─────────╰─│──────────────────╯─│───────╯     ││
│╰──│─────────────────╯╯╮││       ╰││────────────────────││││╰───│────────────────╯│r │───────│───╮1────│──────╮      ││
││││╰────────────────────╯│        ╰╰────────────────────╯││││   │       ╰─────────╰────────────────────╯      │      ││
││││ ╰──────────────────│─╯                               ││││   │           │        │   │       │            │      ││
││╰│───────────────────╯│                                 ││││   ╰────────────────────╯   │       │            │      ││
│└─╰────────────────────╯─────────────────────────────────┘││└───────────────╰────────────────────╯────────────╯──────┘│
└──────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Quad [Tab] focus: Panels | Modifier: _EXTRA | Esc close | Tab cycle                                                   │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
