src/snapshots/droid_tui__regression__visual_quad_modifier_switch_passthrough_snapshot@quad_none_classic_120.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                          DROID: modifier_switch_passthrough                                          │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Panels ──────────────────────────────────────────────────────────────┐┌ Source ──────────────────────────────────────┐
│◉◉┐┌────┐┐                                                            ││┌ Circuits ────────┐┌ Source [raw] ───────┐┌ ┐│
│…0%  CV …                                                             │││p2b8              ││# modifier_switch_pas││·││
││ ││    ││                                                            │││button            ││# Exercises direct co││·││
││ ││    ││                                                            │││copy              ││# copy chains, leaf t││·││
││ ││    ││                                                            │││clocktool         ││                     ││·││
││ ││    ││                                                            │││copy (1)          ││[p2b8]               ││·││
││ ││    ││                                                            │││contour           ││                     ││·││
││ ││    ││                                                            │││copy (2)          ││# HW -> VAR derivatio││·││
││ ││    ││                                                            │││copy (3)          ││[button]             ││·││
││ ││    ││                                                            │││contour (1)       ││    button = B1.1    ││·││
│○○││    ││                                                            │││switch            ││    output = _TRIG   ││·││
│……││    ││                                                            │││quantizer         ││                     ││·││
││ ││    ││                                                            │││mixer             ││[copy]               ││·││
││ ││    ││                                                            │││contour (2)       ││    input = B1.1     ││·││
│○○┘└──▶─┘┘                                                            ││└──────────────────┘└─────────────────────┘└─┘│
└──────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────────┘
┌ Graph FULL ──────────────────────────────────────────────┐┌ Graph FILTERED ──────────────────────────────────────────┐
│╭p2b8────────────────╮───┐                                ││                   No influence selected                  │
││                    │   │                                ││                                                          │
││                    │   │                                ││                                                          │
││                    │   │                                ││                                                          │
│╰────────────────────╯   │                                ││                                                          │
││                        │                                ││                                                          │
││                        │                                ││                                                          │
││                        │                                ││                                                          │
│└────────────────────────┘                                ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
└──────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Quad [Tab] focus: Panels | Modifier: no modifier | Esc close | Tab cycle                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
